--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html class="no-js " lang="en">
 <head>
-    <title>Your moving and storage resource | U-Haul</title>
+    <title>Eddiel</title>
 
     
     
